force-app/main/default/objects/Product2/fields/Product_Categories__c.field-meta.xml
<CustomField>
    <fullName>Product_Categories__c</fullName>
    <label>Product Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tax Consulting</fullName>
            </value>
            <value>
                <fullName>Business Tax Prep</fullName>
            </value>
            <value>
                <fullName>Personal Tax Prep</fullName>
            </value>
            <value>
                <fullName>Client Books</fullName>
            </value>
            <value>
                <fullName>Full-Service Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Estimated Taxes</fullName>
            </value>
            <value>
                <fullName>Loan Agreement</fullName>
            </value>
            <value>
                <fullName>Sales and Use Tax</fullName>
            </value>
            <value>
                <fullName>Two-Year Review</fullName>
            </value>
            <value>
                <fullName>UTC</fullName>
            </value>
            <value>
                <fullName>Personal Tax Return</fullName>
            </value>
            <value>
                <fullName>Audit Support</fullName>
            </value>
            <value>
                <fullName>Registered Agent</fullName>
            </value>
            <value>
                <fullName>CORP</fullName>
            </value>
            <value>
                <fullName>Business Plan</fullName>
            </value>
            <value>
                <fullName>VTO</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Dissolution</fullName>
            </value>
            <value>
                <fullName>Financial Affidavit</fullName>
            </value>
            <value>
                <fullName>Mobile Merchant Processing</fullName>
            </value>
            <value>
                <fullName>Deluxe Recordkeeping Package</fullName>
            </value>
            <value>
                <fullName>Tax Extension</fullName>
            </value>
            <value>
                <fullName>Amended Return (2014)</fullName>
            </value>
            <value>
                <fullName>Revenue Clearance</fullName>
            </value>
            <value>
                <fullName>Final Tax Return</fullName>
            </value>
            <value>
                <fullName>2014 Business Tax Prep</fullName>
            </value>
            <value>
                <fullName>Additional Personal Return</fullName>
            </value>
            <value>
                <fullName>Additional Storage</fullName>
            </value>
            <value>
                <fullName>Articles of Dissolution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>