force-app/main/default/objects/Product2/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Business Document</fullName>
            </value>
            <value>
                <fullName>Business Document Center</fullName>
            </value>
            <value>
                <fullName>Business Plan</fullName>
            </value>
            <value>
                <fullName>DO NOT PAY</fullName>
            </value>
            <value>
                <fullName>Entity Set Up and Binder</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Tax Membership</fullName>
            </value>
            <value>
                <fullName>Tax Preparation</fullName>
            </value>
            <value>
                <fullName>Complete Accounting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>