force-app/main/default/objects/Product2/fields/Product_Class__c.field-meta.xml
<CustomField>
    <fullName>Product_Class__c</fullName>
    <label>Product Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VTO Business</fullName>
            </value>
            <value>
                <fullName>VTO Personal</fullName>
            </value>
            <value>
                <fullName>VTO All</fullName>
            </value>
            <value>
                <fullName>No VTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>