force-app/main/default/objects/Product2/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tax Consulting</fullName>
            </value>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Tax Preparation</fullName>
            </value>
            <value>
                <fullName>Corp Standard</fullName>
            </value>
            <value>
                <fullName>Corp Starter</fullName>
            </value>
            <value>
                <fullName>Corp Recommended</fullName>
            </value>
            <value>
                <fullName>Complete Accounting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>