force-app/main/default/objects/Product2/fields/Product_Receipt_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Receipt_Name__c</fullName>
    <inlineHelpText>This displays on the Payment receipt as the name of this Product.</inlineHelpText>
    <label>Product Receipt Name</label>
    <type>TextArea</type>
</CustomField>