force-app/main/default/objects/Product2/fields/Product_report__c.field-meta.xml
<CustomField>
    <fullName>Product_report__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product (report)</label>
    <type>Text</type>
</CustomField>