force-app/main/default/objects/Product2/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BTP Bundle</fullName>
            </value>
            <value>
                <fullName>Client Portal App</fullName>
            </value>
            <value>
                <fullName>Business Portal</fullName>
            </value>
            <value>
                <fullName>Personal VTO</fullName>
            </value>
            <value>
                <fullName>Business VTO</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Small Business Taxes</fullName>
            </value>
            <value>
                <fullName>Entity Formation Essential Documents</fullName>
            </value>
            <value>
                <fullName>Entity Formation Packages</fullName>
            </value>
            <value>
                <fullName>Entity Formation State Fee</fullName>
            </value>
            <value>
                <fullName>Entity Formation Affordable Tax</fullName>
            </value>
            <value>
                <fullName>Entity Formation Complete Compliance</fullName>
            </value>
            <value>
                <fullName>Entity Formation Business Legal Plan</fullName>
            </value>
            <value>
                <fullName>Extensions</fullName>
            </value>
            <value>
                <fullName>Audit Protection</fullName>
            </value>
            <value>
                <fullName>Tax Smart</fullName>
            </value>
            <value>
                <fullName>Accounting Package</fullName>
            </value>
            <value>
                <fullName>A La Carte</fullName>
            </value>
            <value>
                <fullName>Corp</fullName>
            </value>
            <value>
                <fullName>Sam&apos;s Club</fullName>
            </value>
            <value>
                <fullName>Merchant Processing</fullName>
            </value>
            <value>
                <fullName>A La Carte (Website)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>