force-app/main/default/objects/Product2/fields/Promo_Shortcode__c.field-meta.xml
<CustomField>
    <fullName>Promo_Shortcode__c</fullName>
    <label>Promo Shortcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>