force-app/main/default/objects/Product2/fields/Public_Title__c.field-meta.xml
<CustomField>
    <fullName>Public_Title__c</fullName>
    <label>Public Title</label>
    <length>64</length>
    <type>Text</type>
</CustomField>