force-app/main/default/objects/Product2/fields/Quarterly_Recurring__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Recurring__c</fullName>
    <label>Quarterly Recurring</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>