force-app/main/default/objects/Product2/fields/Recurring_Payments__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurring Payments</label>
    <type>Checkbox</type>
</CustomField>