force-app/main/default/objects/Product2/fields/Remove_First_Month_Charge__c.field-meta.xml
<CustomField>
    <fullName>Remove_First_Month_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove First Month Charge</label>
    <type>Checkbox</type>
</CustomField>