force-app/main/default/objects/Product2/fields/Remove_First_Month_Charge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remove_First_Month_Charge_Amount__c</fullName>
    <label>Remove First Month Charge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>