force-app/main/default/objects/Product2/fields/Renewal_Fee__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Fee__c</fullName>
    <label>Renewal Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>