force-app/main/default/objects/Product2/fields/Renewal_Rules__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Rules__c</fullName>
    <label>Renewal Rules</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>