force-app/main/default/objects/Product2/fields/ServiceLine__c.field-meta.xml
<CustomField>
    <fullName>ServiceLine__c</fullName>
    <label>Service Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audit Protection</fullName>
            </value>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>ClientBooks</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Sales and Use Tax</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Two-Year Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>