force-app/main/default/objects/Product2/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <inlineHelpText>This field indicates what order the product will appear on a ChargeOver invoice. If 1, then all of the other product descriptions will display on a single product, if 2 or greater that will affect the other sort orders.</inlineHelpText>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>