force-app/main/default/objects/Product2/fields/SOW_Description__c.field-meta.xml
<CustomField>
    <fullName>SOW_Description__c</fullName>
    <label>SOW Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>