force-app/main/default/objects/Product2/fields/SOW_Raw__c.field-meta.xml
<CustomField>
    <fullName>SOW_Raw__c</fullName>
    <label>SOW Raw</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>