force-app/main/default/objects/Product2/fields/Split_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Split_Payment_Amount__c</fullName>
    <label>Split Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>