force-app/main/default/objects/Product2/fields/Task_Creation__c.field-meta.xml
<CustomField>
    <fullName>Task_Creation__c</fullName>
    <label>Task Creation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>