force-app/main/default/objects/Product2/fields/Task_List__c.field-meta.xml
<CustomField>
    <fullName>Task_List__c</fullName>
    <label>Task List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Additional Personal Return</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Articles of Organization</fullName>
            </value>
            <value>
                <fullName>Bookkeeping Q1</fullName>
            </value>
            <value>
                <fullName>Bookkeeping Q2</fullName>
            </value>
            <value>
                <fullName>Bookkeeping Q3</fullName>
            </value>
            <value>
                <fullName>Bookkeeping Q4</fullName>
            </value>
            <value>
                <fullName>Business Plan</fullName>
            </value>
            <value>
                <fullName>Client Books</fullName>
            </value>
            <value>
                <fullName>Company Seal</fullName>
            </value>
            <value>
                <fullName>Corporate Binder</fullName>
            </value>
            <value>
                <fullName>EIN Number</fullName>
            </value>
            <value>
                <fullName>Email / Priority Mail</fullName>
            </value>
            <value>
                <fullName>Expedited Processing</fullName>
            </value>
            <value>
                <fullName>Installment Agreement + Tax Consult</fullName>
            </value>
            <value>
                <fullName>Loan Agreement</fullName>
            </value>
            <value>
                <fullName>New Entity Public Filing Notice</fullName>
            </value>
            <value>
                <fullName>Operating Agreement</fullName>
            </value>
            <value>
                <fullName>Payroll 1</fullName>
            </value>
            <value>
                <fullName>Payroll 3</fullName>
            </value>
            <value>
                <fullName>Payroll 5</fullName>
            </value>
            <value>
                <fullName>Payroll 6</fullName>
            </value>
            <value>
                <fullName>Payroll 7</fullName>
            </value>
            <value>
                <fullName>Resident Agent</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Use Tax</fullName>
            </value>
            <value>
                <fullName>Schedule Webinar</fullName>
            </value>
            <value>
                <fullName>Stock Certificates</fullName>
            </value>
            <value>
                <fullName>Tax - 1040-ES Estimated Q1</fullName>
            </value>
            <value>
                <fullName>Tax - 1040-ES Estimated Q2</fullName>
            </value>
            <value>
                <fullName>Tax - 1040-ES Estimated Q3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>