force-app/main/default/objects/Product2/fields/Top_10_Products__c.field-meta.xml
<CustomField>
    <fullName>Top_10_Products__c</fullName>
    <label>Top 10 Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>