force-app/main/default/objects/Product2/fields/Variation__c.field-meta.xml
<CustomField>
    <fullName>Variation__c</fullName>
    <description>Used to categorize groups of products</description>
    <label>Variation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>