force-app/main/default/objects/Product2/fields/Web_Portal_Product__c.field-meta.xml
<CustomField>
    <fullName>Web_Portal_Product__c</fullName>
    <label>Web Portal Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FALSE</fullName>
                <default>true</default>
                <label>FALSE</label>
            </value>
            <value>
                <fullName>TRUE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>