force-app/main/default/objects/Product2/fields/Year_2_Price_Increase_Percent__c.field-meta.xml
<CustomField>
    <fullName>Year_2_Price_Increase_Percent__c</fullName>
    <description>The percentage that a product&apos;s price should increase upon the 2nd year&apos;s renewal. This field works in tandem with the Number of Years for Price Increase field to determine who often renewal prices should increase.</description>
    <inlineHelpText>The percentage that a product&apos;s price should increase upon the 2nd year&apos;s renewal.</inlineHelpText>
    <label>Year 2+ Price Increase Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>