force-app/main/default/objects/Product2/fields/ZZ_Category__c.field-meta.xml
<CustomField>
    <fullName>ZZ_Category__c</fullName>
    <description>The primary category for each product</description>
    <inlineHelpText>Please choose the values that best represent the primary category of each product</inlineHelpText>
    <label>ZZ Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>General Accounting</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Setup/Dissolution</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>