force-app/main/default/objects/Product2/fields/ZZ_Primary_Category__c.field-meta.xml
<CustomField>
    <fullName>ZZ_Primary_Category__c</fullName>
    <description>Business, Personal, or business and personal</description>
    <label>ZZ Primary Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>