force-app/main/default/objects/Product2/fields/ZZ_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>ZZ_Subcategory__c</fullName>
    <description>Subcategories that best match the product</description>
    <label>ZZ Subcategory</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Dissolution</fullName>
            </value>
            <value>
                <fullName>Non profit</fullName>
            </value>
            <value>
                <fullName>Other tax preparation</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Portal access</fullName>
            </value>
            <value>
                <fullName>Portal storage</fullName>
            </value>
            <value>
                <fullName>Setup</fullName>
            </value>
            <value>
                <fullName>Tax preparation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>