force-app/main/default/objects/Product2/listViews/All_Active_Products.listView-meta.xml
<ListView>
    <fullName>All_Active_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Standard_Price__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Product_Categories__c</columns>
    <columns>Variation__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Product_Class__c</columns>
    <columns>Product_Category__c</columns>
    <columns>HTML_Description__c</columns>
    <columns>Public_Title__c</columns>
    <columns>Price_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Active Products</label>
</ListView>