force-app/main/default/objects/Product2/listViews/Categories.listView-meta.xml
<ListView>
    <fullName>Categories</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Product_Categories__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Categories</label>
    <language>en_US</language>
</ListView>