force-app/main/default/objects/Product2/listViews/ChargeOver_Products.listView-meta.xml
<ListView>
    <fullName>ChargeOver_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Billing_Frequency__c</columns>
    <columns>Price_Description__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Permissions__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>SOW_Description__c</columns>
    <columns>AnnualMonthlyOption__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ChargeOver__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>ChargeOver Products</label>
</ListView>