force-app/main/default/objects/Product2/listViews/Corp.listView-meta.xml
<ListView>
    <fullName>Corp</fullName>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Product_Categories__c</columns>
    <columns>HTML_Description__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Variation__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>B62_Price_Status__c</columns>
    <columns>Standard_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Corp</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Corp Products</label>
    <language>en_US</language>
</ListView>