force-app/main/default/objects/Product2/listViews/Merchant_Processing.listView-meta.xml
<ListView>
    <fullName>Merchant_Processing</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Standard_Price__c</columns>
    <columns>Monthly_Recurring__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Merchant Processing</value>
    </filters>
    <label>Merchant Processing</label>
    <language>en_US</language>
</ListView>