force-app/main/default/objects/Product2/listViews/One_Time_ChargeOver_Products.listView-meta.xml
<ListView>
    <fullName>One_Time_ChargeOver_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Calculator_Location__c</columns>
    <columns>Environment__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Billing_Frequency__c</columns>
    <columns>SOW_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ChargeOver__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Billing_Frequency__c</field>
        <operation>equals</operation>
        <value>One-Time</value>
    </filters>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>notEqual</operation>
        <value>Bundle,Digitial Business Solutions,Partner Offering</value>
    </filters>
    <label>One-Time ChargeOver Products</label>
</ListView>