force-app/main/default/objects/Product2/listViews/Packages.listView-meta.xml
<ListView>
    <fullName>Packages</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Standard_Price__c</columns>
    <columns>Monthly_Recurring__c</columns>
    <columns>Quarterly_Recurring__c</columns>
    <columns>Renewal_Fee__c</columns>
    <columns>Renewal_Rules__c</columns>
    <columns>Follow_Up_Billing__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Accounting Package</value>
    </filters>
    <label>Packages</label>
</ListView>