force-app/main/default/objects/Product2/listViews/Personal_VTO.listView-meta.xml
<ListView>
    <fullName>Personal_VTO</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Standard_Price__c</columns>
    <columns>Variation__c</columns>
    <columns>Public_Title__c</columns>
    <columns>HTML_Description__c</columns>
    <columns>Product_Categories__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>B62_Price_Status__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Product_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Type__c</field>
        <operation>includes</operation>
        <value>Personal VTO</value>
    </filters>
    <label>Personal VTO</label>
    <language>en_US</language>
</ListView>