force-app/main/default/objects/Product2/listViews/Renewal_packages.listView-meta.xml
<ListView>
    <fullName>Renewal_packages</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Standard_Price__c</columns>
    <columns>Internal_Description__c</columns>
    <columns>Product_Categories__c</columns>
    <columns>Product_Receipt_Name__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>RENEWAL</value>
    </filters>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>notContain</operation>
        <value>sams</value>
    </filters>
    <label>Renewal packages</label>
    <language>en_US</language>
</ListView>